# basa-ocr

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
data/: prepare_even.py  prepare_even_random.py  prepare_fixed_random.py  prepare_fixed_words.py  prepare_iam.py  prepare_synth90k.py  prepare_var.py
notebooks/: load_synth90k.py  train_emnist.py  train_mnist.py  train_synth90k.py
notebooks/__marimo__/session/: load_synth90k.py.json  train.py.json  train_emnist.py.json  train_synth90k.py.json
src/: eval_var_crnn.py  tracker.py  train_emnist.py  train_fixed_dcnn.py  train_fixed_words.py  train_mnist.py  train_utils.py  train_var_crnn.py  train_var_dcnn.py  train_var_words.py
src/basa/: utils.py
src/basa/captcha_var/: dataset.py  eval.py
src/basa/cnn_emnist/: dataset.py
src/basa/cnn_mnist/: train.py
src/basa/cnn_v2/: model.py
src/basa/crnn/: ctc_decode.py  eval.py  train.py
src/basa/crnn_iam/: dataset.py  eval.py  model.py  train.py
src/basa/crnn_synth90k/: ctc_decode.py  dataset.py  model.py  train.py
src/basa/crnn_v2/: bilstm.py  dataset.py  train.py
src/basa/dcnn/: dataset.py  model.py  train.py
src/basa/emnist/: model.py  train.py
src/basa/mnist/: dataset.py
